design first 2 pages

--- a/index.html
+++ b/index.html
@@ -141,43 +141,26 @@
             </div>
         </section>
 
-        <section class="page">
-            <div class="container">    
-                <div class="row align-items-start mt-5">
+        <section class="page d-flex justify-content-center flex-column">
+            <div class="container">
+                <h1 class="fs-xxl fw-bold">
+                    Cosa ti permette di comunicare
+                    <span class="color-primary fw-bold d-block">SIG Terra Alu-free?</span>
+                </h1> 
+                <div class="row align-items-center mt-5">
                     <div class="col-md-6">
-                        <div class="d-flex align-items-center pack">
-                            <img src="assets/img/Pack all.png" class="img-fluid" alt="">
+                        <div class="card border-4 primary-border p-4">
+                            <div class="d-flex align-items-center gap-4">
+                                <img src="assets/icons/co2.svg" alt="">
+                                <h6 class="fw-bold fs-md">
+                                    Riduzione CO2
+                                </h6>
+                            </div>
+
+                            <p class="fs-md mt-2 mb-0">
+                                Questa confezione aiuta a ridurre le emissioni di CO2
+                            </p>
                         </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <h1 class="fs-xxl fw-bold color-primary">3 SIG Terra<br />Alu-free</h1>
-                        <p class="fs-lg color-dark mt-4">
-                            La prima confezione per il latte <br /><span class="color-primary fw-bold">senza alluminio!</span>
-                        </p>
-
-                        <ul class="list-unstyled fs-md mt-5 d-flex flex-column gap-3">
-                            <li class="d-flex gap-3 align-items-center">
-                                <img src="assets/icons/right-arrow.svg" alt="">
-                                <p class="mb-0">Fino al <span class="color-primary">-27%</span> di emissioni di CO<sub>2</sub></p>
-                            </li>
-                            <li class="d-flex gap-3 align-items-center">
-                                <img src="assets/icons/right-arrow.svg" alt="">
-                                <p class="mb-0">Carta certificata <span class="color-primary">FSC®</span></p>
-                            </li>
-                            <li class="d-flex gap-3 align-items-center">
-                                <img src="assets/icons/right-arrow.svg" alt="">
-                                <p class="mb-0">Fino al <span class="color-primary">100%</span> di materiali di origine vegetale</p>
-                            </li>
-                            <li class="d-flex gap-3 align-items-center">
-                                <img src="assets/icons/right-arrow.svg" alt="">
-                                <p class="mb-0"><span class="color-primary">6 mesi</span> di shelf life garantita</p>
-                            </li>
-                            <li class="d-flex gap-3 align-items-center">
-                                <img src="assets/icons/right-arrow.svg" alt="">
-                                <p class="mb-0">Disponibile in <span class="color-primary">due formati</span> (Slimline e Midi) e <span class="color-primary">tre diversi volumi</span> (500 – 750 – 1000 ml)</p>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
