change active page

--- a/index.html
+++ b/index.html
@@ -141,24 +141,78 @@
             </div>
         </section>
 
-        <section class="page d-flex justify-content-center flex-column">
-            <div class="container">
+        <section class="page d-flex justify-content-center pb-5 flex-column">
+            <div class="container pb-5">
                 <h1 class="fs-xxl fw-bold">
                     Cosa ti permette di comunicare
                     <span class="color-primary fw-bold d-block">SIG Terra Alu-free?</span>
                 </h1> 
-                <div class="row align-items-center mt-5">
-                    <div class="col-md-6">
+                <div class="row align-items-center mt-4">
+                    <div class="col-md-6 fs-normal">
                         <div class="card border-4 primary-border p-4">
                             <div class="d-flex align-items-center gap-4">
                                 <img src="assets/icons/co2.svg" alt="">
-                                <h6 class="fw-bold fs-md">
+                                <h6 class="fw-bold">
                                     Riduzione CO2
                                 </h6>
                             </div>
 
-                            <p class="fs-md mt-2 mb-0">
+                            <p class="mt-2 mb-0">
                                 Questa confezione aiuta a ridurre le emissioni di CO2
+                            </p>
+                        </div>
+
+                        <div class="card border-4 primary-border p-4 mt-4">
+                            <div class="d-flex align-items-center gap-4">
+                                <img src="assets/icons/leaves.png" alt="">
+                                <h6 class="fw-bold">
+                                    Materiali rinnovabili
+                                </h6>
+                            </div>
+
+                            <p class="mt-2 mb-0">
+                                Questa confezione è legata per il 100% a materie prime rinnovabili (bilanciamento di massa)
+                            </p>
+                        </div>
+
+                        <div class="card border-4 primary-border p-4 mt-4">
+                            <div class="d-flex align-items-center gap-4">
+                                <img src="assets/icons/fan.svg" alt="">
+                                <h6 class="fw-bold">
+                                    Energia rinnovabile
+                                </h6>
+                            </div>
+
+                            <p class="mt-2 mb-0">
+                                Questa confezione è realizzata con il 100% di energia rinnovabile
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card border-4 primary-border p-4">
+                            <div class="d-flex align-items-center gap-4">
+                                <img src="assets/icons/co2.svg" alt="">
+                                <h6 class="fw-bold">
+                                    Alu-free
+                                </h6>
+                            </div>
+
+                            <p class="mt-2 mb-0">
+                                Questa confezione è senza strato di alluminio
+                            </p>
+                        </div>
+
+                        <div class="card border-4 primary-border p-4 mt-4">
+                            <div class="d-flex align-items-center gap-4">
+                                <img src="assets/icons/fan.svg" alt="">
+                                <h6 class="fw-bold">
+                                    FSC®
+                                </h6>
+                            </div>
+
+                            <p class="mt-2 mb-0">
+                                La carta di questa confezione è certificata FSC® e proviene da foreste gestite in maniera responsabile e da altre fonti controllate
                             </p>
                         </div>
                     </div>
