design desktop version

--- a/index.html
+++ b/index.html
@@ -86,8 +86,6 @@
                     </div>
 
                     <div class="col-md-6">
-                        <img src="assets/img/texts/2nd-slide-textbox.png" class="img-fluid mb-5 second-slide-textbox" alt="">
-
                         <div class="position-relative pack-upper-textbox">
                             <div class="text-center">
                                 <img src="assets/icons/right-arrow-alt.svg" class="img-fluid" alt="">
@@ -141,17 +139,19 @@
             </div>
         </section>
 
+        <!-- Third Page -->
         <section class="page d-flex justify-content-center pb-5 flex-column">
+            <img src="assets/icons/SIG_Scribbles_RGB_Sky-27 2.png" class="third-page-icon1" alt="">
             <div class="container pb-5">
                 <h1 class="fs-xxl fw-bold">
                     Cosa ti permette di comunicare
                     <span class="color-primary fw-bold d-block">SIG Terra Alu-free?</span>
                 </h1> 
-                <div class="row align-items-center mt-4">
-                    <div class="col-md-6 fs-normal">
+                <div class="info-grid align-items-center mt-4">
+                    <div class="col fs-normal" style="grid-column: span 5 / span 11;">
                         <div class="card border-4 primary-border p-4">
                             <div class="d-flex align-items-center gap-4">
-                                <img src="assets/icons/co2.svg" alt="">
+                                <img src="assets/icons/co2.svg" class="w-45" alt="">
                                 <h6 class="fw-bold">
                                     Riduzione CO2
                                 </h6>
@@ -162,9 +162,9 @@
                             </p>
                         </div>
 
-                        <div class="card border-4 primary-border p-4 mt-4">
+                        <div class="card border-4 primary-border p-4 mt-5">
                             <div class="d-flex align-items-center gap-4">
-                                <img src="assets/icons/leaves.png" alt="">
+                                <img src="assets/icons/leaves.png" class="h-45" alt="">
                                 <h6 class="fw-bold">
                                     Materiali rinnovabili
                                 </h6>
@@ -175,9 +175,9 @@
                             </p>
                         </div>
 
-                        <div class="card border-4 primary-border p-4 mt-4">
+                        <div class="card border-4 primary-border p-4 mt-5">
                             <div class="d-flex align-items-center gap-4">
-                                <img src="assets/icons/fan.svg" alt="">
+                                <img src="assets/icons/fan.svg" class="h-40" alt="">
                                 <h6 class="fw-bold">
                                     Energia rinnovabile
                                 </h6>
@@ -189,10 +189,14 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="col text-center">
+                        <img src="assets/icons/border-vertical.png" alt="">
+                    </div>
+
+                    <div class="col position-relative" style="grid-column: span 5 / span 11;">
                         <div class="card border-4 primary-border p-4">
                             <div class="d-flex align-items-center gap-4">
-                                <img src="assets/icons/co2.svg" alt="">
+                                <img src="assets/icons/alu-free.svg" class="h-40" alt="">
                                 <h6 class="fw-bold">
                                     Alu-free
                                 </h6>
@@ -203,9 +207,9 @@
                             </p>
                         </div>
 
-                        <div class="card border-4 primary-border p-4 mt-4">
+                        <div class="card border-4 primary-border p-4 mt-5">
                             <div class="d-flex align-items-center gap-4">
-                                <img src="assets/icons/fan.svg" alt="">
+                                <img src="assets/icons/fsc.svg" class="h-40" alt="">
                                 <h6 class="fw-bold">
                                     FSC®
                                 </h6>
@@ -218,45 +222,29 @@
                     </div>
                 </div>
             </div>
+            <img src="assets/icons/SIG_Scribbles_RGB_Sky-27 2.png" class="third-page-icon2" alt="">
         </section>
 
-        <section class="page">
+        <!-- Fourth Page -->
+        <section class="page d-flex justify-content-center pb-5 flex-column position-relative">
+            <img src="assets/icons/right-arrow-lg.png" class="right-arrow-lg position-absolute start-0 top-0" alt="">
+            <img src="assets/icons/line-shape.png" class="line-shape position-absolute top-0 end-0" alt="">
+            <img src="assets/icons/world-shape.png" class="line-shape position-absolute bottom-0 end-0" alt="">
+
             <div class="container">    
-                <div class="row align-items-start mt-5">
-                    <div class="col-md-6">
-                        <div class="d-flex align-items-center pack">
-                            <img src="assets/img/Pack all.png" class="img-fluid" alt="">
-                        </div>
-                    </div>
+                <div class="row align-items-center">
+                    <div class="col text-center">
+                        <img src="assets/img/SIG_Logo_Tagline_RGB_Blue_Black_Spark.svg" class="logo-alt" alt="">
 
-                    <div class="col-md-6">
-                        <h1 class="fs-xxl fw-bold color-primary">4 SIG Terra<br />Alu-free</h1>
-                        <p class="fs-lg color-dark mt-4">
-                            La prima confezione per il latte <br /><span class="color-primary fw-bold">senza alluminio!</span>
-                        </p>
-
-                        <ul class="list-unstyled fs-md mt-5 d-flex flex-column gap-3">
-                            <li class="d-flex gap-3 align-items-center">
-                                <img src="assets/icons/right-arrow.svg" alt="">
-                                <p class="mb-0">Fino al <span class="color-primary">-27%</span> di emissioni di CO<sub>2</sub></p>
-                            </li>
-                            <li class="d-flex gap-3 align-items-center">
-                                <img src="assets/icons/right-arrow.svg" alt="">
-                                <p class="mb-0">Carta certificata <span class="color-primary">FSC®</span></p>
-                            </li>
-                            <li class="d-flex gap-3 align-items-center">
-                                <img src="assets/icons/right-arrow.svg" alt="">
-                                <p class="mb-0">Fino al <span class="color-primary">100%</span> di materiali di origine vegetale</p>
-                            </li>
-                            <li class="d-flex gap-3 align-items-center">
-                                <img src="assets/icons/right-arrow.svg" alt="">
-                                <p class="mb-0"><span class="color-primary">6 mesi</span> di shelf life garantita</p>
-                            </li>
-                            <li class="d-flex gap-3 align-items-center">
-                                <img src="assets/icons/right-arrow.svg" alt="">
-                                <p class="mb-0">Disponibile in <span class="color-primary">due formati</span> (Slimline e Midi) e <span class="color-primary">tre diversi volumi</span> (500 – 750 – 1000 ml)</p>
-                            </li>
-                        </ul>
+                        <h3 class="fs-xl mt-4">
+                            Vuoi avere tutte le informazioni a<br>portata di mano?
+                        </h3>
+                        <a href="#!" class="fs-lg mt-5 text-decoration-none">
+                            <span class="fs-xl color-primary fw-bold position-relative">
+                                Scarica qui la brochure
+                                <img src="assets/icons/border.png" class="position-absolute start-0 w-100 border-img" alt="">
+                            </span>
+                        <h2/>
                     </div>
                 </div>
             </div>
