--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 <body>
     <header class="pager d-flex justify-content-center position-absolute top-0 w-100 pt-4">
@@ -27,41 +28,41 @@
         <!-- 1st Page -->
         <section class="page d-flex justify-content-center flex-column">
             <div class="container">
-                <div class="row align-items-start mt-5">
-                    <div class="col-md-6">
-                        <div class="d-flex align-items-center pack">
-                            <img src="assets/img/Pack all.png" class="img-fluid" alt="">
-                        </div>
-                    </div>
-
+                <div class="row align-items-start flex-column flex-md-row-reverse mt-5">
                     <div class="col-md-6">
                         <h1 class="fs-xxl fw-bold color-primary">SIG Terra<br />Alu-free</h1>
                         <p class="fs-lg color-dark mt-3">
                             La prima confezione per il latte <br /><span class="color-primary fw-bold">senza alluminio!</span>
                         </p>
 
-                        <ul class="list-unstyled fs-md mt-4 d-flex flex-column gap-3">
+                        <ul class="list-unstyled fs-md mt-4 d-flex flex-column gap-2 gap-md-3">
                             <li class="d-flex align-items-start gap-3">
-                                <img src="assets/icons/right-arrow.svg" class="mt-2" alt="">
+                                <img src="assets/icons/right-arrow.svg" class="mt-1 mt-md-2 list-arrow-ico" alt="">
                                 <p class="mb-0">Fino al <span class="color-primary">-27%</span> di emissioni di CO<sub>2</sub></p>
                             </li>
                             <li class="d-flex align-items-start gap-3">
-                                <img src="assets/icons/right-arrow.svg" class="mt-2" alt="">
+                                <img src="assets/icons/right-arrow.svg" class="mt-1 mt-md-2 list-arrow-ico" alt="">
                                 <p class="mb-0">Carta certificata <span class="color-primary">FSC®</span></p>
                             </li>
                             <li class="d-flex align-items-start gap-3">
-                                <img src="assets/icons/right-arrow.svg" class="mt-2" alt="">
+                                <img src="assets/icons/right-arrow.svg" class="mt-1 mt-md-2 list-arrow-ico" alt="">
                                 <p class="mb-0">Fino al <span class="color-primary">100%</span> di materiali di origine vegetale</p>
                             </li>
                             <li class="d-flex align-items-start gap-3">
-                                <img src="assets/icons/right-arrow.svg" class="mt-2" alt="">
+                                <img src="assets/icons/right-arrow.svg" class="mt-1 mt-md-2 list-arrow-ico" alt="">
                                 <p class="mb-0"><span class="color-primary">6 mesi</span> di shelf life garantita</p>
                             </li>
                             <li class="d-flex align-items-start gap-3">
-                                <img src="assets/icons/right-arrow.svg" class="mt-2" alt="">
+                                <img src="assets/icons/right-arrow.svg" class="mt-1 mt-md-2 list-arrow-ico" alt="">
                                 <p class="mb-0">Disponibile in <span class="color-primary">due formati</span> (Slimline e Midi) e <span class="color-primary">tre diversi volumi</span> (500 – 750 – 1000 ml)</p>
                             </li>
                         </ul>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="d-flex align-items-center pack">
+                            <img src="assets/img/Pack all.png" class="img-fluid pe-5 pe-md-0 mt-4 mt-md-0" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -72,10 +73,10 @@
             <div class="container">    
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <h1 class="fs-xxl fw-bold">
+                        <h1 class="fs-xxl fs-xxl-m fw-bold">
                             Ma cosa significa <span class="color-primary">rimuovere <br>l’alluminio</span> da una<br>confezione in<br>cartone?
                         </h1>
-                        <p class="fs-lg mt-5">
+                        <p class="fs-lg mt-3 mt-md-5">
                             <span>Il 5% di alluminio rappresenta il</span><br>
                             <span class="fs-xl color-primary fw-bold position-relative">
                                 0% delle emissioni di CO2*
@@ -106,7 +107,7 @@
                             </div>
                         </div>
 
-                        <div class="d-flex justify-content-between align-items-center gap-5 2nd-page-packs">
+                        <div class="d-flex justify-content-between align-items-center gap-4 gap-md-5 2nd-page-packs">
                             <div class="position-relative pack-75-box">
                                 <img src="assets/img/75-Pack.png" class="img-fluid" alt="">
                             </div>
@@ -131,7 +132,7 @@
                             </div>
                         </div>
 
-                        <p class="fs-xsm fw-bold text-center mt-4">
+                        <p class="fs-xsm fw-bold mt-4 mini-text-box">
                             *percentuale relativa alle sole materie prime della confezione
                         </p>
                     </div>
@@ -147,12 +148,12 @@
                     Cosa ti permette di comunicare
                     <span class="color-primary fw-bold d-block">SIG Terra Alu-free?</span>
                 </h1> 
-                <div class="info-grid align-items-center mt-4">
-                    <div class="col fs-normal" style="grid-column: span 5 / span 11;">
-                        <div class="card border-4 primary-border p-4">
-                            <div class="d-flex align-items-center gap-4">
+                <div class="info-grid align-items-center mt-4 fs-normal">
+                    <div class="col" style="grid-column: span 5 / span 11;">
+                        <div class="card border-2 border-md-4 primary-border p-2 p-md-4">
+                            <div class="d-flex align-items-start gap-2 gap-md-4">
                                 <img src="assets/icons/co2.svg" class="w-45" alt="">
-                                <h6 class="fw-bold">
+                                <h6 class="fw-bold infograph-heading">
                                     Riduzione CO2
                                 </h6>
                             </div>
@@ -162,10 +163,10 @@
                             </p>
                         </div>
 
-                        <div class="card border-4 primary-border p-4 mt-5">
-                            <div class="d-flex align-items-center gap-4">
-                                <img src="assets/icons/leaves.png" class="h-45" alt="">
-                                <h6 class="fw-bold">
+                        <div class="card border-2 border-md-4 primary-border p-2 p-md-4 mt-2 mt-md-5">
+                            <div class="d-flex align-items-start gap-2 gap-md-4">
+                                <img src="assets/icons/leaves.png" class="h-40" alt="">
+                                <h6 class="fw-bold infograph-heading">
                                     Materiali rinnovabili
                                 </h6>
                             </div>
@@ -175,10 +176,10 @@
                             </p>
                         </div>
 
-                        <div class="card border-4 primary-border p-4 mt-5">
-                            <div class="d-flex align-items-center gap-4">
+                        <div class="card border-2 border-md-4 primary-border p-2 p-md-4 mt-2 mt-md-5">
+                            <div class="d-flex align-items-start gap-2 gap-md-4">
                                 <img src="assets/icons/fan.svg" class="h-40" alt="">
-                                <h6 class="fw-bold">
+                                <h6 class="fw-bold infograph-heading">
                                     Energia rinnovabile
                                 </h6>
                             </div>
@@ -190,14 +191,14 @@
                     </div>
 
                     <div class="col text-center">
-                        <img src="assets/icons/border-vertical.png" alt="">
+                        <img src="assets/icons/border-vertical.png" class="vertical-border-img" alt="">
                     </div>
 
                     <div class="col position-relative" style="grid-column: span 5 / span 11;">
-                        <div class="card border-4 primary-border p-4">
-                            <div class="d-flex align-items-center gap-4">
+                        <div class="card border-2 border-md-4 primary-border p-2 p-md-4">
+                            <div class="d-flex align-items-start gap-2 gap-md-4">
                                 <img src="assets/icons/alu-free.svg" class="h-40" alt="">
-                                <h6 class="fw-bold">
+                                <h6 class="fw-bold infograph-heading">
                                     Alu-free
                                 </h6>
                             </div>
@@ -207,10 +208,10 @@
                             </p>
                         </div>
 
-                        <div class="card border-4 primary-border p-4 mt-5">
-                            <div class="d-flex align-items-center gap-4">
+                        <div class="card border-2 border-md-4 primary-border p-2 p-md-4 mt-2 mt-md-5">
+                            <div class="d-flex align-items-start gap-2 gap-md-4">
                                 <img src="assets/icons/fsc.svg" class="h-40" alt="">
-                                <h6 class="fw-bold">
+                                <h6 class="fw-bold infograph-heading">
                                     FSC®
                                 </h6>
                             </div>
@@ -236,11 +237,11 @@
                     <div class="col text-center">
                         <img src="assets/img/SIG_Logo_Tagline_RGB_Blue_Black_Spark.svg" class="logo-alt" alt="">
 
-                        <h3 class="fs-xl mt-4">
+                        <h3 class="fs-xl fs-xl-m mt-4">
                             Vuoi avere tutte le informazioni a<br>portata di mano?
                         </h3>
-                        <a href="#!" class="fs-lg mt-5 text-decoration-none">
-                            <span class="fs-xl color-primary fw-bold position-relative">
+                        <a href="#!" class="mt-5 text-decoration-none">
+                            <span class="fs-xl fs-xl-m color-primary fw-bold position-relative">
                                 Scarica qui la brochure
                                 <img src="assets/icons/border.png" class="position-absolute start-0 w-100 border-img" alt="">
                             </span>
