fix design for mobile devices

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <div class="row align-items-start flex-column flex-md-row-reverse mt-5">
                     <div class="col-md-6">
                         <h1 class="fs-xxl fw-bold color-primary">SIG Terra<br />Alu-free</h1>
-                        <p class="fs-lg color-dark mt-3">
+                        <p class="fs-lg color-dark mt-2">
                             La prima confezione per il latte <br /><span class="color-primary fw-bold">senza alluminio!</span>
                         </p>
 
-                        <ul class="list-unstyled fs-md mt-4 d-flex flex-column gap-2 gap-md-3">
+                        <ul class="list-unstyled fs-md mt-2 d-flex flex-column gap-1 gap-md-3">
                             <li class="d-flex align-items-start gap-3">
                                 <img src="assets/icons/right-arrow.svg" class="mt-1 mt-md-2 list-arrow-ico" alt="">
                                 <p class="mb-0">Fino al <span class="color-primary">-27%</span> di emissioni di CO<sub>2</sub></p>
@@ -61,7 +61,7 @@
 
                     <div class="col-md-6">
                         <div class="d-flex align-items-center pack">
-                            <img src="assets/img/Pack all.png" class="img-fluid pe-5 pe-md-0 mt-4 mt-md-0" alt="">
+                            <img src="assets/img/Pack all.png" class="img-fluid pe-5 pe-md-0 mt-2 mt-md-0" alt="">
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                                     </p>
                                 </div>
     
-                                <div class="col-6">
+                                <div class="col-6 position-relative">
                                     <p class="pack-21-text text-center">
                                         <span class="fw-semibold">Impatto</span> in <br>emissioni di CO<sub>2</sub>
                                     </p>
@@ -144,7 +144,7 @@
         <section class="page d-flex justify-content-center pb-5 flex-column">
             <img src="assets/icons/SIG_Scribbles_RGB_Sky-27 2.png" class="third-page-icon1" alt="">
             <div class="container pb-5">
-                <h1 class="fs-xxl fw-bold">
+                <h1 class="fs-xxl fs-xxl-mx fw-bold">
                     Cosa ti permette di comunicare
                     <span class="color-primary fw-bold d-block">SIG Terra Alu-free?</span>
                 </h1> 
@@ -253,7 +253,7 @@
     </main>
 
     <footer class="position-absolute bottom-0 w-100">
-        <section class="container py-5">
+        <section class="container py-3 py-md-5">
             <img src="assets/img/SIG_Logo_Tagline_RGB_Blue_Black_Spark.svg" class="logo position-absolute top-0" alt="">
             <div class="row">
                 <div class="col">
