--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     </div>
 
                     <div class="col-md-6">
-                        <div class="d-flex align-items-center pack">
-                            <img src="assets/img/Pack all.png" class="img-fluid pe-5 pe-md-0 mt-2 mt-md-0" alt="">
+                        <div class="pack overflow-hidden">
+                            <img src="assets/img/Pack all.png" class="img-fluid mt-2 mt-md-0" alt="">
                         </div>
                     </div>
                 </div>
