--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="col-md-6">
-                        <div class="pack overflow-hidden">
+                        <div class="pack">
                             <img src="assets/img/Pack all.png" class="img-fluid mt-2 mt-md-0" alt="">
                         </div>
                     </div>
