--- a/index.html
+++ b/index.html
@@ -30,12 +30,19 @@
             <div class="container">
                 <div class="row align-items-start flex-column flex-md-row-reverse mt-5">
                     <div class="col-md-6">
-                        <h1 class="fs-xxl fw-bold color-primary">SIG Terra<br />Alu-free</h1>
-                        <p class="fs-lg color-dark mt-2">
+                        <h1 class="fs-xxl color-primary fw-bold position-relative">
+                            <span class="position-relative">
+                                SIG Terra<br />Alu-free
+
+                                <img src="assets/icons/border.png" class="position-absolute start-0 w-100 border-img" alt="">
+                            </span>
+                        </h1>
+
+                        <p class="fs-lg color-dark mt-4">
                             La prima confezione per il latte <br /><span class="color-primary fw-bold">senza alluminio!</span>
                         </p>
 
-                        <ul class="list-unstyled fs-md mt-2 d-flex flex-column gap-1 gap-md-3">
+                        <ul class="list-unstyled fs-md mt-3 d-flex flex-column gap-1 gap-md-3">
                             <li class="d-flex align-items-start gap-3">
                                 <img src="assets/icons/right-arrow.svg" class="mt-1 mt-md-2 list-arrow-ico" alt="">
                                 <p class="mb-0">Fino al <span class="color-primary">-27%</span> di emissioni di CO<sub>2</sub></p>
@@ -60,7 +67,8 @@
                     </div>
 
                     <div class="col-md-6">
-                        <div class="pack">
+                        <div class="pack mt-3 mt-md-0 position-relative">
+                            <img src="assets/icons/cap-top-shape.svg" class="cap-top-shape position-absolute" alt="">
                             <img src="assets/img/Pack all.png" class="img-fluid mt-2 mt-md-0" alt="">
                         </div>
                     </div>
@@ -146,7 +154,11 @@
             <div class="container pb-5">
                 <h1 class="fs-xxl fs-xxl-mx fw-bold">
                     Cosa ti permette di comunicare
-                    <span class="color-primary fw-bold d-block">SIG Terra Alu-free?</span>
+
+                    <span class="position-relative color-primary fw-bold d-inline-block">
+                        SIG Terra Alu-free?
+                        <img src="assets/icons/border.png" class="position-absolute start-0 w-100 border-img" alt="">
+                    </span>
                 </h1> 
                 <div class="info-grid align-items-center mt-4 fs-normal">
                     <div class="col" style="grid-column: span 5 / span 11;">
@@ -258,10 +270,10 @@
             <div class="row">
                 <div class="col">
                     <div class="d-flex gap-2 navigation justify-content-center">
-                        <button id="prev" class="rounded-circle border-3 btn p-0 primary-border">
+                        <button onclick="showPrevious()" id="prev" class="rounded-circle border-3 btn p-0 primary-border">
                             <img src="assets/icons/chevron-up.svg" alt="">
                         </button>
-                        <button id="next" class="rounded-circle border-3 btn p-0 primary-border">
+                        <button onclick="showNext()" id="next" class="rounded-circle border-3 btn p-0 primary-border">
                             <img src="assets/icons/chevron-down.svg" alt="">
                         </button>
                     </div>
