--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             </li>
                             <li class="d-flex align-items-start gap-3">
                                 <img src="assets/icons/right-arrow.svg" class="mt-1 mt-md-2 list-arrow-ico" alt="">
-                                <p class="mb-0">Carta certificata <span class="color-primary">FSC®</span></p>
+                                <p class="mb-0">Carta certificata <span class="color-primary">FSC<sup>®</sup></span></p>
                             </li>
                             <li class="d-flex align-items-start gap-3">
                                 <img src="assets/icons/right-arrow.svg" class="mt-1 mt-md-2 list-arrow-ico" alt="">
@@ -87,7 +87,7 @@
                         <p class="fs-lg mt-3 mt-md-5">
                             <span>Il 5% di alluminio rappresenta il</span><br>
                             <span class="fs-xl color-primary fw-bold position-relative">
-                                0% delle emissioni di CO2*
+                                0% delle emissioni di CO<sub>2</sub>*
 
                                 <img src="assets/icons/border.png" class="position-absolute start-0 w-100 border-img" alt="">
                             </span>
@@ -166,12 +166,12 @@
                             <div class="d-flex align-items-start gap-2 gap-md-4">
                                 <img src="assets/icons/co2.svg" class="w-45" alt="">
                                 <h6 class="fw-bold infograph-heading">
-                                    Riduzione CO2
+                                    Riduzione CO<sub>2</sub>
                                 </h6>
                             </div>
 
                             <p class="mt-2 mb-0">
-                                Questa confezione aiuta a ridurre le emissioni di CO2
+                                Questa confezione aiuta a ridurre le emissioni di CO<sub>2</sub>
                             </p>
                         </div>
 
@@ -224,7 +224,7 @@
                             <div class="d-flex align-items-start gap-2 gap-md-4">
                                 <img src="assets/icons/fsc.svg" class="h-40" alt="">
                                 <h6 class="fw-bold infograph-heading">
-                                    FSC®
+                                    FSC<sup>®</sup>
                                 </h6>
                             </div>
 
@@ -252,12 +252,12 @@
                         <h3 class="fs-xl fs-xl-m mt-4">
                             Vuoi avere tutte le informazioni a<br>portata di mano?
                         </h3>
-                        <a href="#!" class="mt-5 text-decoration-none">
+                        <a href="https://sig-e-tu-non-lo-vuoi-senza-alluminio.info/SIG%20brochure%20(Preview).pdf" class="mt-5 text-decoration-none">
                             <span class="fs-xl fs-xl-m color-primary fw-bold position-relative">
                                 Scarica qui la brochure
                                 <img src="assets/icons/border.png" class="position-absolute start-0 w-100 border-img" alt="">
                             </span>
-                        <h2/>
+                        </a>
                     </div>
                 </div>
             </div>
