--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section id="first-page" class="page d-flex justify-content-center flex-column">
             <div class="container">
                 <div class="row align-items-start flex-column flex-md-row-reverse mt-5">
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <h1 class="fs-xxl color-primary fw-bold position-relative">
                             <span class="position-relative">
                                 SIG Terra<br />Alu-free
@@ -66,10 +66,10 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-6">
-                        <div class="pack mt-3 mt-md-0 position-relative">
+                    <div class="col-lg-6">
+                        <div class="pack mt-3 mt-md-5 mt-xl-0 position-relative">
                             <img src="assets/icons/cap-top-shape.svg" class="cap-top-shape position-absolute" alt="">
-                            <img src="assets/img/Pack all.png" class="img-fluid mt-2 mt-md-0" alt="">
+                            <img src="assets/img/Pack all.png" class="img-fluid mt-2 mt-md-0 all-pack" alt="">
                         </div>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
         <section id="second-page" class="page d-flex justify-content-center flex-column">
             <div class="container">    
                 <div class="row align-items-center">
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <h1 class="fs-xxl fs-xxl-m fw-bold">
                             Ma cosa significa <span class="color-primary">rimuovere <br>l’alluminio</span> da una<br>confezione in<br>cartone?
                         </h1>
@@ -94,7 +94,7 @@
                         </p>
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="position-relative pack-upper-textbox">
                             <div class="text-center">
                                 <img src="assets/icons/right-arrow-alt.svg" class="img-fluid" alt="">
