fix scroll to mobile

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             </li>
                             <li class="d-flex align-items-start gap-3">
                                 <img src="assets/icons/right-arrow.svg" class="mt-1 mt-md-2 list-arrow-ico" alt="">
-                                <p class="mb-0"><span class="color-primary">6 mesi</span> di shelf life garantita</p>
+                                <p class="mb-0"><span class="color-primary">6 mesi</span> di shelf life</p>
                             </li>
                             <li class="d-flex align-items-start gap-3">
                                 <img src="assets/icons/right-arrow.svg" class="mt-1 mt-md-2 list-arrow-ico" alt="">
@@ -252,7 +252,7 @@
                         <h3 class="fs-xl fs-xl-m mt-4">
                             Vuoi avere tutte le informazioni a<br>portata di mano?
                         </h3>
-                        <a href="https://sig-e-tu-non-lo-vuoi-senza-alluminio.info/SIG%20brochure%20(Preview).pdf" class="mt-5 text-decoration-none">
+                        <a href="https://sig-e-tu-non-lo-vuoi-senza-alluminio.info/SIGbrochure(Preview).pdf" class="mt-5 text-decoration-none">
                             <span class="fs-xl fs-xl-m color-primary fw-bold position-relative">
                                 Scarica qui la brochure
                                 <img src="assets/icons/border.png" class="position-absolute start-0 w-100 border-img" alt="">
