fix design issue

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                         <div class="d-flex justify-content-between align-items-center gap-4 gap-md-5 2nd-page-packs">
                             <div class="position-relative pack-75-box">
-                                <img src="assets/img/75-Pack.png" class="img-fluid" alt="">
+                                <img src="assets/img/Pack 1 Data.svg" class="img-fluid" alt="">
                             </div>
 
                             <div class="d-flex align-items-center flex-column pack-variation">
@@ -136,7 +136,7 @@
                             </div>
                             
                             <div class="pack-21-box">
-                                <img src="assets/img/21-Pack.png" class="img-fluid" alt="">
+                                <img src="assets/img/Pack 2 Data.svg" class="img-fluid" alt="">
                             </div>
                         </div>
 
