fix design issue

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <h1 class="fs-xxl fs-xxl-m fw-bold">
-                            Ma cosa significa <span class="color-primary">rimuovere <br>l’alluminio</span> da una<br>confezione in<br>cartone?
+                            Ma cosa significa <span class="color-primary">rimuovere l’alluminio</span> da una confezione in cartone?
                         </h1>
                         <p class="fs-lg mt-3 mt-md-5">
                             <span>Il 5% di alluminio rappresenta il</span><br>
