--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- 1st Page -->
         <section id="first-page" class="page d-flex justify-content-center flex-column">
             <div class="container">
-                <div class="row align-items-start flex-column flex-md-row-reverse mt-5">
+                <div class="row align-items-start flex-column flex-md-row-reverse">
                     <div class="col-lg-6">
                         <h1 class="fs-xxl color-primary fw-bold position-relative">
                             <span class="position-relative">
@@ -77,8 +77,8 @@
         </section>
 
         <!-- 2nd Page -->
-        <section id="second-page" class="page d-flex justify-content-center flex-column">
-            <div class="container">    
+        <section id="second-page" class="page d-flex flex-column">
+            <div class="container pt-5">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <h1 class="fs-xxl fs-xxl-m fw-bold">
@@ -149,7 +149,7 @@
         </section>
 
         <!-- Third Page -->
-        <section id="third-page" class="page d-flex justify-content-center pb-5 flex-column">
+        <section id="third-page" class="page d-flex pt-5 flex-column">
             <img src="assets/icons/SIG_Scribbles_RGB_Sky-27 2.png" class="third-page-icon1" alt="">
             <div class="container pb-5">
                 <h1 class="fs-xxl fs-xxl-mx fw-bold">
