fix design issue

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
                     <div class="col-lg-6">
                         <div class="pack mt-3 mt-md-5 mt-xl-0 position-relative">
-                            <img src="assets/icons/cap-top-shape.svg" class="cap-top-shape position-absolute" alt="">
-                            <img src="assets/img/Pack all.png" class="img-fluid mt-2 mt-md-0 all-pack" alt="">
+                            <!-- <img src="assets/icons/cap-top-shape.svg" class="cap-top-shape position-absolute" alt=""> -->
+                            <img src="assets/img/alt-pack-all.png" class="img-fluid mt-2 mt-md-0 all-pack" alt="">
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
         </section>
 
         <!-- 2nd Page -->
-        <section id="second-page" class="page d-flex flex-column">
+        <section id="second-page" class="page d-flex justify-content-md-center flex-column">
             <div class="container pt-5">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
@@ -149,9 +149,9 @@
         </section>
 
         <!-- Third Page -->
-        <section id="third-page" class="page d-flex pt-5 flex-column">
+        <section id="third-page" class="page d-flex  justify-content-md-center pt-5 flex-column">
             <img src="assets/icons/SIG_Scribbles_RGB_Sky-27 2.png" class="third-page-icon1" alt="">
-            <div class="container pb-5">
+            <div class="container pt-4">
                 <h1 class="fs-xxl fs-xxl-mx fw-bold">
                     Cosa ti permette di comunicare
 
