--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <span class="position-relative">
                                 SIG Terra<br />Alu-free
         
-                                <img src="assets/icons/border.png" class="position-absolute start-0 w-100 title-border-img" alt="">
+                                <img src="assets/icons/border.png" class="position-absolute start-0 bottom-0 w-100 title-border-img" alt="">
                             </span>
                         </h1>
         
