--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <!-- Fourth Page -->
         <section id="fourth-page" class="page d-flex justify-content-center pb-5 flex-column position-relative">
             <img src="assets/icons/right-arrow-lg.png" class="right-arrow-lg position-absolute start-0 top-0" alt="">
-            <img src="assets/icons/line-shape.png" class="line-shape position-absolute top-0 end-0" alt="">
+            <img src="assets/icons/line-shape-alt.png" class="line-shape position-absolute top-0 end-0" alt="">
             <img src="assets/icons/world-shape.png" class="line-shape position-absolute bottom-0 end-0" alt="">
         
             <div class="container">    
