--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             </div>
         
                             <p class="mt-1 mb-0">
-                                La carta di questa confezione è certificata FSC® e proviene da foreste gestite in maniera responsabile e da altre fonti controllate
+                                La carta di questa confezione è certificata <span class="color-primary">FSC<sup>®</sup></span> e proviene da foreste gestite in maniera responsabile e da altre fonti controllate
                             </p>
                         </div>
                     </div>
