--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <div class="card border-2 border-md-4 primary-border p-2 p-md-4">
                             <div class="d-flex align-items-center gap-2 gap-md-4">
                                 <img src="assets/icons/co2.svg" class="w-45" alt="">
-                                <h6 class="fw-bold infograph-heading">
+                                <h6 class="fw-bold infograph-heading mb-0">
                                     Riduzione CO<sub>2</sub>
                                 </h6>
                             </div>
@@ -142,7 +142,7 @@
                         <div class="card border-2 border-md-4 primary-border p-2 p-md-4 mt-2 mt-md-5">
                             <div class="d-flex align-items-center gap-2 gap-md-4">
                                 <img src="assets/icons/leaves.png" class="h-40" alt="">
-                                <h6 class="fw-bold infograph-heading">
+                                <h6 class="fw-bold infograph-heading mb-0">
                                     Materiali rinnovabili
                                 </h6>
                             </div>
@@ -155,7 +155,7 @@
                         <div class="card border-2 border-md-4 primary-border p-2 p-md-4 mt-2 mt-md-5">
                             <div class="d-flex align-items-center gap-2 gap-md-4">
                                 <img src="assets/icons/fan.svg" class="h-40" alt="">
-                                <h6 class="fw-bold infograph-heading">
+                                <h6 class="fw-bold infograph-heading mb-0">
                                     Energia rinnovabile
                                 </h6>
                             </div>
@@ -174,7 +174,7 @@
                         <div class="card border-2 border-md-4 primary-border p-2 p-md-4">
                             <div class="d-flex align-items-center gap-2 gap-md-4">
                                 <img src="assets/icons/alu-free.svg" class="h-40" alt="">
-                                <h6 class="fw-bold infograph-heading">
+                                <h6 class="fw-bold infograph-heading mb-0">
                                     Alu-free
                                 </h6>
                             </div>
@@ -187,7 +187,7 @@
                         <div class="card border-2 border-md-4 primary-border p-2 p-md-4 mt-2 mt-md-5">
                             <div class="d-flex align-items-center gap-2 gap-md-4">
                                 <img src="assets/icons/fsc.svg" class="h-40" alt="">
-                                <h6 class="fw-bold infograph-heading">
+                                <h6 class="fw-bold infograph-heading mb-0">
                                     FSC<sup>®</sup>
                                 </h6>
                             </div>
